[tool.poetry]
name = "lession-19"
version = "0.1.0"
description = ""
authors = ["Dmitry Gavrilenko <gavrilaz0076@gmail.com>"]
readme = "README.md"
packages = [{include = "lession_19"}]

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
